feat: instagram feed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <nav class="navbar navbar-light bg-light">
                     <a class="navbar-brand m-auto m-md-0" href="#">
                         <img src="https://cdn.icon-icons.com/icons2/3237/PNG/512/instagram_logo_brand_social_media_application_icon_197362.png" alt="" width="30" height="24" class="d-inline-block align-text-top mt-1 ms-2">
-                        Instagram Feed
+                        <b>Instagram</b>
                     </a>
                     <div class="d-grid gap-2 d-flex m-auto m-md-0 justify-content-md-end">
                         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalNewPost">
